--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,20 +3,20 @@ uvicorn==0.30.1
 python-multipart==0.0.9
 pdfplumber==0.11.0
 
-# Numerical stack (must stay NumPy 1.x)
+# Numerical stack (must use numpy 1.x)
 numpy==1.26.4
 pandas==2.1.4
 scikit-learn==1.3.2
 scipy==1.11.4
 
-# ANN + ML
+# LightGBM + JobLib
 lightgbm==3.3.5
 joblib==1.3.2
 
-# CPU-only PyTorch (no CUDA)
-torch==2.1.2 --extra-index-url https://download.pytorch.org/whl/cpu
+# CPU-only PyTorch (REQUIRED FORMAT)
+torch==2.1.2+cpu --extra-index-url https://download.pytorch.org/whl/cpu
 
-# Sentence Transformers (compatible with Torch 2.1.2)
+# Sentence Transformers
 sentence-transformers==2.2.2
 
 # Google Drive downloader
