Render deployment setup

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,21 +3,14 @@ uvicorn==0.30.1
 python-multipart==0.0.9
 pdfplumber==0.11.0
 
-# Numerical stack (must use numpy 1.x)
 numpy==1.26.4
 pandas==2.1.4
 scikit-learn==1.3.2
 scipy==1.11.4
-
-# LightGBM + JobLib
 lightgbm==3.3.5
 joblib==1.3.2
 
-# CPU-only PyTorch (REQUIRED FORMAT)
-torch==2.1.2+cpu --extra-index-url https://download.pytorch.org/whl/cpu
-
-# Sentence Transformers
+torch==2.2.2 --extra-index-url https://download.pytorch.org/whl/cpu
 sentence-transformers==2.2.2
 
-# Google Drive downloader
 gdown==5.1.0
